postgres-macros/tests/fail/extra_arg.rs
fn main() {
    sqlm_postgres_macros::sql!("{}", 1, 2);
}
