postgres-macros/tests/fail/extra_arg.stderr
error: argument never used
 --> tests/fail/extra_arg.rs:2:41
  |
2 |     sqlm_postgres_macros::sql!("{}", 1, 2);
  |                                         ^
